fixed nav bar alignment across pages

--- a/style.css
+++ b/style.css
@@ -25,24 +25,12 @@ h1 {
   display: none;
 }
 
-/* #home-page {
-  width:100%;
-  height:100vh; 
-  background-image: url("https://media.istockphoto.com/id/1126130554/photo/row-of-old-books-with-colorful-covers-on-pastel-blue-background-education-concept-mock-up-for.jpg?b=1&s=612x612&w=0&k=20&c=IAXpj-Uxt2cK9GebK-3mi_qOH0mSfl2aDK1i_jKyJFM=");
-  background-size: cover;
-  background-repeat: no-repeat;
-  box-sizing: border-box;
-  position: relative;
-  text-align: center;
-  padding-top: 50px;
-} */
-
 .home-page-nav-bar {
   display: flex;
   justify-content: center;
   align-items: center;
   color: black;
-  padding-inline-start: 5vw;
+  /* padding-inline-start: 5vw; */
 }
 
 .browse-page-nav-bar {
@@ -51,6 +39,10 @@ h1 {
   align-items: center;
   color: black;
   padding-inline-start: 5vw;
+}
+
+.browse-page {
+  padding-inline-end: 5vw;
 }
 
 .my-books-page-nav-bar {
@@ -64,7 +56,7 @@ h1 {
 .home-page-nav-list {
   display: inline;
   color: black;
-  padding-inline-start: 5vw;
+  /* padding-inline-start: 5vw; */
   padding-inline-end: 5vw;
 }
 
